--- a/src/main/resources/templates/customer-template/payment-success.html
+++ b/src/main/resources/templates/customer-template/payment-success.html
@@ -261,9 +261,9 @@
           <div class="block-5 mb-5">
             <h3 class="footer-heading mb-4">Thông tin liên hệ</h3>
             <ul class="list-unstyled">
-              <li class="address">Địa chỉ của bạn</li>
-              <li class="phone"><a href="tel://0123456789">0123456789</a></li>
-              <li class="email">email@teehaven.com</li>
+              <li class="address">13 P. Trịnh Văn Bô, Xuân Phương, Nam Từ Liêm, Hà Nội, Việt Nam</li>
+              <li class="phone"><a href="tel://0123456789">0332294560</a></li>
+              <li class="email">TeeHavenshopshoes@gmail.com</li>
             </ul>
           </div>
         </div>
