--- a/src/main/resources/templates/admin-template/thuong_hieu/sua-thuong-hieu.html
+++ b/src/main/resources/templates/admin-template/thuong_hieu/sua-thuong-hieu.html
@@ -519,6 +519,12 @@ function validateThuongHieuInput(input) {
         errorElement.textContent = 'Không được chứa khoảng trống ở đầu hoặc cuối';
         return false;
     }
+  // Kiểm tra số
+  const hasNumber = /\d/;
+  if (hasNumber.test(value)) {
+    errorElement.textContent = 'Không được chứa số';
+    return false;
+  }
     
     // Kiểm tra ký tự đặc biệt
     const specialChars = /[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]+/;
