--- a/src/main/resources/templates/customer-template/shop-single.html
+++ b/src/main/resources/templates/customer-template/shop-single.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="../../static/css/aos.css"/>
     <link rel="stylesheet" href="../../static/css/style-customer-template.css"/>
 
+    <!-- Font Awesome 6 CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-papmH0p3QG0A6qaVqJ7ddHApSm2/0dPRYi+lOYxqEGEPRraKp+54z7AtE7o2O7aDdhXTu9GRAe5OIXN2oL5F8w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
@@ -168,7 +172,7 @@
                     <li><a href="/about">Về chúng tôi</a></li>
                     <li><a href="/lien-he">Liên hệ</a></li>
                     <li><a href="/chinh-sach">Chính Sách</a></li>
-<!--                    <li><a href="/tra-cuu-don-hang">Tra Cứu Đơn Hàng</a></li>-->
+                    <!--                    <li><a href="/tra-cuu-don-hang">Tra Cứu Đơn Hàng</a></li>-->
                 </ul>
             </div>
         </nav>
