--- a/src/main/resources/templates/customer-template/dia-chi.html
+++ b/src/main/resources/templates/customer-template/dia-chi.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Glacat</title>
+    <title>Tee Haven</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link href="../../static/img/logo_teehaven.png" rel="icon">
@@ -19,6 +19,7 @@
     <link href="../../../static/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="../../../static/vendor/simple-datatables/style.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../static/css/magnific-popup.css"/>
@@ -96,7 +97,7 @@
 
                     <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
                         <div class="site-logo">
-                            <a href="/home" class="js-logo-clone">Glacat</a>
+                            <a href="/home" class="js-logo-clone">Tee Haven</a>
                         </div>
                     </div>
 
@@ -105,7 +106,9 @@
                             <ul class="nav nav-pills" style="margin-left: 54%">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"
-                                       role="button" aria-expanded="false"><span class="icon icon-person"></span></a>
+                                       role="button" aria-expanded="false">
+                                        <i class="fa-solid fa-user"></i>
+                                    </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="/user/thong-tin-khach-hang">Tài Khoản Của Tôi</a>
                                         </li>
@@ -115,11 +118,11 @@
                                 </li>
 
                                 <!--                                <li class="nav-item" style="margin-left: -15%">-->
-<!--                                    <a class="nav-link" href="#"><span class="icon icon-heart-o"></span></a>-->
-<!--                                </li>-->
+                                <!--                                    <a class="nav-link" href="#"><span class="icon icon-heart-o"></span></a>-->
+                                <!--                                </li>-->
                                 <li class="nav-item" style="margin-top: 5%;margin-left: -5%">
                                     <a class="site-cart" href="/user/cart">
-                                        <span class="icon icon-shopping_cart"></span>
+                                        <i class="fa-solid fa-cart-shopping"></i>
                                         <span class="count" th:text="${soLuongSPGioHangCT}"></span>
                                     </a>
                                 </li>
@@ -160,7 +163,7 @@
                     <li><a href="/about">Về chúng tôi</a></li>
                     <li><a href="/lien-he">Liên hệ</a></li>
                     <li><a href="/chinh-sach">Chính Sách</a></li>
-<!--                    <li><a href="/tra-cuu-don-hang">Tra Cứu Đơn Hàng</a></li>-->
+                    <!--                    <li><a href="/tra-cuu-don-hang">Tra Cứu Đơn Hàng</a></li>-->
                 </ul>
             </div>
         </nav>
@@ -1084,7 +1087,7 @@
                             <li class="phone">
                                 <a href="tel://23923929210">+84 377 463 664</a>
                             </li>
-                            <li class="email">glacatshopshoes@gmail.com</li>
+                            <li class="email">TeeHavenshop@gmail.com</li>
                         </ul>
                     </div>
                 </div>
