--- a/src/main/resources/templates/customer-template/don-mua-chi-tiet.html
+++ b/src/main/resources/templates/customer-template/don-mua-chi-tiet.html
@@ -14,6 +14,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700"/>
     <link rel="stylesheet" href="../../static/fonts/icomoon/style.css"/>
@@ -709,7 +710,11 @@
                                     </tr>
                                     <tr>
                                         <td colspan="2">Phương thức Thanh toán</td>
-                                        <td class="tien-table">Thanh toán khi nhận hàng</td>
+                                        <td class="tien-table">
+                                            <span th:if="${byHoaDon.phuongThucThanhToan != null && byHoaDon.phuongThucThanhToan.id == 1}">Thanh toán khi nhận hàng (COD)</span>
+                                            <span th:if="${byHoaDon.phuongThucThanhToan != null && byHoaDon.phuongThucThanhToan.id == 2}">Đã thanh toán qua VNPay</span>
+                                            <span th:if="${byHoaDon.phuongThucThanhToan == null}">Thanh toán khi nhận hàng (COD)</span>
+                                        </td>
                                     </tr>
                                     </tbody>
 
@@ -753,7 +758,11 @@
 
                                     <tr>
                                         <td colspan="2">Phương thức Thanh toán</td>
-                                        <td class="tien-table">Thanh toán khi nhận hàng</td>
+                                        <td class="tien-table">
+                                            <span th:if="${byHoaDon.phuongThucThanhToan != null && byHoaDon.phuongThucThanhToan.id == 1}">Thanh toán khi nhận hàng (COD)</span>
+                                            <span th:if="${byHoaDon.phuongThucThanhToan != null && byHoaDon.phuongThucThanhToan.id == 2}">Đã thanh toán qua VNPay</span>
+                                            <span th:if="${byHoaDon.phuongThucThanhToan == null}">Thanh toán khi nhận hàng (COD)</span>
+                                        </td>
                                     </tr>
                                     </tbody>
 
