--- a/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
+++ b/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
@@ -1817,8 +1817,7 @@
                                                 <div class="modal-body">
                                                     <div style="text-align: center;"
                                                          class="container-fluid">
-                                                        Không có sản phẩm vẫn cố thanh toán rất là bảo thủ
-                                                        ?
+                                                        Không có sản phẩm trong hoá đơn hay thêm sản phẩm đi nhé ♥♥♥
                                                     </div>
                                                 </div>
                                                 <div class="modal-footer">
